src/objects/LG_DWHIntegrationVariables__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>LG_AdditionalDisplayValue__c</fullName>
        <label>Additional Display Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AttributeDefinitionName__c</fullName>
        <label>Attribute Definition Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_DisplayValue__c</fullName>
        <label>Display Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_HierarchyLevel__c</fullName>
        <label>Hierarchy Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_ProductCategoryName__c</fullName>
        <label>Product Category Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ProductDefinitionName__c</fullName>
        <label>Product Definition Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ProductName__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DWH Integration Variables</label>
</CustomObject>